--- a/sonar.properties
+++ b/sonar.properties
@@ -1,1 +1,20 @@
 sonar.web.context=/sonarqube
+
+sonar.projectKey=test:satu
+sonar.projectName=test sonar
+sonar.projectVersion=1.0.0
+
+# path to source code
+sonar.sources=src/main
+
+# path to  test code
+#sonar.tests=src/test
+
+sonar.language=java
+
+#Path for binaries
+sonar.binaries=target/classes
+
+sonar.sourceEncoding=UTF-8 
+sonar.analysis.mode=preview
+sonar.github.repository=arifpurwandaru/sonar-java-plugin
